<resources>
    <string name="app_name">baemin-clone-android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="loading">로딩중입니다.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agree">어서오세요\n약관동의가 필요해요</string>
    <string name="register">회원가입</string>
    <string name="naver_client_id">dT2Rrg9dc8RWwMAUTpwr</string>
    <string name="naver_client_secret">SI8BiRzry5</string>
    <string name="naver_client_name">배달의민족clone</string>
    <string name="nickName">닉네임</string>
    <string name="nickName_example">닉네임을 2\u002D 10자로 입력해주세요</string>
    <string name="nickName_caution">2 \u002d 10자로 입력해주세요</string>
    <string name="birth">생년월일</string>
    <string name="birth_example">예) 2000.01.01</string>
    <string name="birth_caution">생년월일은 8자리로 입력해주세요 (예) 2000.01.01)</string>
    <string name="login">로그인</string>
    <string name="delivery"><b>배달</b></string>
    <string name="visit"><b>포장/방문</b></string>
    <string name="marketing"><b>마케팅 정보 수신동의</b></string>
    <string name="marketing_detail">이벤트 및 혜택에 대한 정보를 받으실 수 있어요</string>
    <string name="title_activity_shoplist">ShoplistActivity</string>
    <string name="korea"><b>한식</b></string>
    <string name="dduck"><b>분식</b></string>
    <string name="japan"><b>돈까스\u00B7회\u00B7일식</b></string>
    <string name="chicken"><b>치킨</b></string>
    <string name="pizza"><b>피자</b></string>
    <string name="china"><b>중국집</b></string>
    <string name="bossam"><b>족발\u00b7보쌈</b></string>
    <string name="asia"><b>아시안\u00b7양식</b></string>
    <string name="night"><b>야식</b></string>
    <string name="soup"><b>찜\u00b7탕</b></string>
    <string name="dosirok"><b>도시락</b></string>
    <string name="cafe"><b>카페\u00b7디저트</b></string>
    <string name="fastfood"><b>패스트푸드</b></string>
    <string name="franchise"><b>프랜차이즈</b></string>
    <string name="delivery_order"><b>배달주문</b></string>
    <string name="visit_order"><b>포장/방문주문</b></string>
    <string name="menu"><b>메뉴</b></string>
    <string name="information"><b>정보</b></string>
    <string name="review"><b>리뷰</b></string>
    <string name="agreement">개인정보호법에 의해 만 14세 이상부터 배민서비스 이용이 가능합니다. 첫 주문시 본인인증을 받고있으며 만 14세 미만인 경우 계정정보가 삭제됩니다.</string>
    <string name="bmart"><b>B마트</b></string>
    <string name="deliveryandvisit"><b>배달 \u00b7 포장/방문</b></string>
    <string name="bookmark"><b>찜한가게</b></string>
    <string name="directpay"><b>바로결제</b></string>
    <string name="call"><b>전화주문</b></string>

</resources>