<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.login.socialregister.SocialRegisterFragment"
    android:orientation="vertical"
    android:clickable="true"
    android:background="#ffffff"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/social_register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/ToolbarTheme"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:elevation="1dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="배달의민족 시작하기"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="서비스 이용을 위해\n필요한 정보를 입력해주세요"
        android:gravity="center"
        android:layout_marginBottom="60dp"/>
    <LinearLayout
        android:id="@+id/social_register_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickName"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/social_register_nicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickName_example"/>
        <TextView
            android:id="@+id/social_register_nicName_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"
            android:text="@string/nickName_caution"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/social_register_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_example"
            android:inputType="date"/>
        <TextView
            android:id="@+id/social_register_birth_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"
            android:text="@string/birth_caution"/>
        <Button
            android:id="@+id/social_login_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:text="시작하기"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>


</LinearLayout>