<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#ffffff"
    android:clickable="true"
    android:orientation="vertical"

    tools:context=".src.login.register.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:theme="@style/ToolbarTheme"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="회원가입"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/register_submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="완료"
            android:layout_marginRight="20dp"
            android:textColor="@color/browser_actions_title_color"
            android:layout_gravity="end" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="이메일"
        android:textStyle="bold"
        android:textSize="16sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">
        
        <EditText
            android:id="@+id/register_email"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/register_check_duplicate_btn"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:textColor="@color/browser_actions_title_color"
            android:background="@drawable/normal_box_edge"
            android:text="중복확인"
            android:padding="10dp"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/register_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_marginTop="35dp"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nickName"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="10dp"/>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:padding="5dp">

           <com.professionalandroid.apps.baemin_clone_android.src.login.ClearEditText
               android:id="@+id/register_nickName"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:hint="@string/nickName_example" />

        </FrameLayout>
        <TextView
            android:id="@+id/register_nickName_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:visibility="invisible"
            android:textSize="13sp"
            android:text="@string/nickName_caution"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="비밀번호"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"/>

        <com.professionalandroid.apps.baemin_clone_android.src.login.ClearEditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="비밀번호를 입력해주세요"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/register_password_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="13sp"
            android:visibility="invisible"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="10자 이상 영어 대문자, 소문자, 숫자, 특수문자 중 2 종류를 조합해야 합니다."/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth"
            android:textSize="16sp"
            android:textColor="#000000"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="10dp"/>

        <com.professionalandroid.apps.baemin_clone_android.src.login.ClearEditText
            android:id="@+id/register_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birth_example"
            android:inputType="date"/>
        <TextView
            android:id="@+id/register_birth_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"
            android:textSize="13sp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/birth_caution"/>
    </LinearLayout>


</LinearLayout>