<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".src.shopdetail.ShopDetailFragment"
    android:background="#ffffff"
    android:clickable="true">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:background="#ffffff"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="45dp"
                android:elevation="6dp">
                <TextView
                    android:id="@+id/shop_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="풍천장어"
                    android:textSize="30sp"
                    android:textColor="#000000"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/shop_detail_star_layout" />

                <LinearLayout
                    android:id="@+id/shop_detail_star_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shop_detail_title"
                    app:layout_constraintBottom_toTopOf="@id/shop_detail_review">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fullstar"
                        android:adjustViewBounds="true"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fullstar"
                        android:adjustViewBounds="true"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fullstar"
                        android:adjustViewBounds="true"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fullstar"
                        android:adjustViewBounds="true"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/fullstar"
                        android:adjustViewBounds="true"/>
                    <TextView
                        android:id="@+id/shop_detail_star"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.8"
                        android:textSize="22sp"
                        android:textColor="#000000"
                        android:layout_marginStart="4dp"/>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/shop_detail_review"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/shop_detail_star_layout"
                    app:layout_constraintBottom_toTopOf="@id/shop_detail_select">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="최근리뷰"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/shop_detail_review_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="126"
                        android:textSize="16sp"
                        android:layout_marginStart="4dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="|"
                        android:textSize="16sp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="최근사장님댓글"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="99"
                        android:textSize="16sp"
                        android:layout_marginStart="4dp"/>
                </LinearLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/shop_detail_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/shop_detail_review"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:id="@+id/shop_detail_call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/shop_detail_bookmark">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/call"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="전화"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:layout_gravity="center_vertical"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/shop_detail_bookmark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/shop_detail_call"
                        app:layout_constraintRight_toLeftOf="@id/shop_detail_share">

                        <ImageView
                            android:id="@+id/shop_detail_bookmark_img"
                            android:layout_width="25dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/bookmark_check"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="찜"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:layout_gravity="center_vertical"/>
                        <TextView
                            android:id="@+id/shop_detail_bookmark_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="451"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:layout_gravity="center_vertical"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/shop_detail_share"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/shop_detail_bookmark"
                        app:layout_constraintRight_toRightOf="parent">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:src="@drawable/share"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="공유"
                            android:textColor="#000000"
                            android:textSize="14sp"
                            android:layout_gravity="center_vertical"/>

                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/shop_detail_tab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:tabIndicatorHeight="4dp"
                app:tabIndicatorColor="#000000"
                app:tabSelectedTextColor="#000000"
                app:tabRippleColor="@null"
                android:layout_marginTop="10dp"
                app:tabIndicatorFullWidth="false" >

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/shop_detail_delivery_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_order" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/shop_detail_visit_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_order" />

            </com.google.android.material.tabs.TabLayout>

            <FrameLayout
                android:id="@+id/shop_detail_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/shop_detail_item_tab"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:tabIndicatorHeight="4dp"
                app:tabIndicatorColor="#000000"
                app:tabSelectedTextColor="#000000"
                app:tabRippleColor="@null"
                android:layout_marginTop="10dp"
                app:tabIndicatorGravity="top">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/shop_detail_menu_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/menu" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/shop_detail_info_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/information" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/shop_detail_review_tab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/review" />

            </com.google.android.material.tabs.TabLayout>

            <FrameLayout
                android:id="@+id/shop_detail_fragment2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"/>
                </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/shop_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:theme="@style/ToolbarTheme"
        android:contentInsetLeft="0dp"
        android:contentInsetStart="0dp"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        android:background="#ffffff">



        <TextView
            android:id="@+id/shop_detail_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="메뉴이름"
            android:textStyle="bold"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/shop_detail_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/search"
            android:layout_gravity="end"/>


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/shop_detail_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="#2AE1BC"
        android:src="@drawable/floatingbutton"
        app:maxImageSize="56dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_gravity="bottom|end"
        android:elevation="8dp"/>


</FrameLayout>